# bpftime-new-api-poc

./: CMakeLists.txt  README.md  attach_manager.cpp  attach_manager.hpp  base_attach_impl.hpp  base_event_provider.cpp  base_event_provider.hpp  c_func.h  event_provider_impl.cpp  event_provider_impl.hpp  minimal_syscall_server.cpp  nginx_module_attach_impl.cpp  nginx_module_attach_impl.hpp
bpftime/: CMakeLists.txt  attach_manager.cpp  attach_manager.hpp  base_attach_impl.cpp  base_attach_impl.hpp  base_event_provider.hpp  event_provider_impl.cpp
